Add emailJS service

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+
+    <!-- EMAIL JS FUNCTIONALITY CODE - Can be done using npm packages too-->
+
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("_LzmMaNXFCJQpzF9b"); // Public user key - To check if there is a valid user account on the service
+            emailjs.send("service_6tepuq5","template_ygys75k");
+        })();
+    </script>
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
 </head>
