--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <script type="text/javascript">
         (function(){
             emailjs.init("_LzmMaNXFCJQpzF9b"); // Public user key - To check if there is a valid user account on the service
-            emailjs.send("service_6tepuq5","template_ygys75k");
+            // emailjs.send("service_6tepuq5","template_ygys75k"); // Testing to ensure the api is linked to the web page. Runs on page load
         })();
     </script>
 
@@ -62,15 +62,11 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
                 <div class="center-form">
-                    <form>
-                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
-                        <div class="form-row text-center">
-                            <div class="col">
-                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
-                            </div>
-                        </div>
+                    <form id="contactForms" onsubmit="return sendMail(this);">
+                        <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+                        <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+                        <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+                        <button type="submit" class="btn btn-secondary center-block">Send Project Request</button>
                     </form>
                 </div>
 
@@ -139,5 +135,6 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/contact.js"></script>
 </body>
 </html>
